[gd_scene load_steps=6 format=3 uid="uid://crw4wd8rod3mh"]

[ext_resource type="Theme" uid="uid://b0xtrucce6h42" path="res://themes/main_theme.tres" id="1_shibi"]
[ext_resource type="Texture2D" uid="uid://dyexnlikeyk4f" path="res://assets/ui/leaderboard_list.png" id="1_xq78f"]
[ext_resource type="Script" path="res://scenes/hud/leaderboard_list.gd" id="2_b1e8c"]
[ext_resource type="Shader" path="res://leaderboard_rank_offset.gdshader" id="2_y0tcv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4s0m"]
shader = ExtResource("2_y0tcv")
shader_parameter/y_offset = 14.5

[node name="LeaderboardList" type="TextureRect"]
custom_minimum_size = Vector2(0, 58)
theme = ExtResource("1_shibi")
texture = ExtResource("1_xq78f")
expand_mode = 2
stretch_mode = 2
script = ExtResource("2_b1e8c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="RankLabel" type="Label" parent="MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_m4s0m")
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Player name"
vertical_alignment = 1

[node name="MassLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "mass"
horizontal_alignment = 2
vertical_alignment = 1
